--- a/lndb.conf
+++ b/lndb.conf
@@ -1,10 +1,30 @@
 # shellcheck shell=bash
 
-# Directories that must be included in the encrypted archive.
-SRC_DIRS=(
-  /var/lib/lnd
-  /etc/lnd
+# Base directory for LND chain data (supports ~ expansion).
+BASE_CHAIN_DIR="$HOME/.lnd/data/chain/bitcoin/mainnet"
+
+# Relative file targets under BASE_CHAIN_DIR.
+RELATIVE_FILE_TARGETS=(
+  admin.macaroon
+  chainnotifier.macaroon
+  channel.backup
+  invoice.macaroon
+  invoices.macaroon
+  macaroons.db
+  readonly.macaroon
+  router.macaroon
+  signer.macaroon
+  wallet.db
+  walletkit.macaroon
 )
+
+# Relative directory targets under BASE_CHAIN_DIR.
+RELATIVE_DIR_TARGETS=(
+  chan-backup-archives
+)
+
+# Additional absolute paths to include (optional).
+EXTRA_TARGETS=()
 
 # Archive naming + workspace
 ARCHIVE_PREFIX="lndb-backup"
@@ -17,8 +37,14 @@ REMOTE_USER="backup"
 REMOTE_HOST="backup.example.com"
 REMOTE_PATH="/data/lndb"
 
-# Crypto
-GPG_RECIPIENT="recipient@example.com"
+# Crypto (provide at least one of email/ID or fingerprint)
+GPG_RECIPIENT="recipient@example.com"          # email or key ID
+GPG_RECIPIENT_FINGERPRINT=""                   # full fingerprint preferred
+GPG_KEY_ID=""                                  # optional override when fetching keys
+GPG_KEY_SOURCE="auto"                          # auto|existing|file|keyserver|url
+GPG_PUBLIC_KEY_FILE=""
+GPG_KEYSERVER=""                               # e.g., hkps://keys.openpgp.org
+GPG_KEY_URL=""                                 # http(s) URL to download public key
 
 # Retention (days)
 RETENTION_DAYS_LOCAL=30
@@ -32,6 +58,12 @@ LOG_FILE="/var/log/lndb.log"
 AUTO_INSTALL_MISSING_BINS=true
 # Override package manager detection if needed (e.g., "apt-get", "apk").
 PACKAGE_MANAGER_OVERRIDE=""
+
+# Trigger/daemon integration
+TRIGGER_MODE="direct"                # direct|systemd|signal
+SYSTEMD_UNIT_NAME="lndb-backup.service"
+DAEMON_PID_FILE="/run/lndb-daemon.pid"
+DAEMON_SIGNAL="USR1"
 
 # Required binaries for Phase 1
 REQUIRED_BINS=(tar gzip gpg scp mountpoint find xargs)
