--- a/lndb.conf
+++ b/lndb.conf
@@ -1,3 +1,10 @@
+#lndB.conf
+
+
 GPG_KEY_ID="DD83F46C8D538A2750A409D56AA0E105F96527B3"
-SOURCE_PATH="./test.txt"
+SOURCE_FILES=(
+	"test.txt"
+	"test2.txt"
+)
+SOURCE_PATH="./"
 BACKUP_DIR="./backups"
